--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,8 +9,8 @@ on:
       - main
 
 jobs:
-  ruff:
-    name: Ruff
+  test:
+    name: Run Tests
     runs-on: ubuntu-latest
     steps:
       - name: Checkout the repository
@@ -19,11 +19,11 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: 3.11
+          python-version: 3.13
           cache: pip
 
       - name: Install requirements
         run: python3 -m pip install -r dev-requirements.txt
 
-      - name: Run tests
+      - name: Run pytest
         run: python3 -m pytest
